Refactor admin and auth modules